fix(PassphraseForm): Make password advice align properly with text

--- a/src/styles/passphrase.styl
+++ b/src/styles/passphrase.styl
@@ -1,4 +1,4 @@
 .set-passphrase-advices
     p
-        display inline-block
+        display inline
         margin 0
